--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/CatalogoInventario/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/CatalogoInventario/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Catálogos";
+    ViewBag.Title = "Consulta de catálogos de inventario";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
