--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/CatalogoTipoInventario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/CatalogoTipoInventario/Nuevo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Inventario.in_CatalogoTipo_Info
 @{
-    ViewBag.Title = "Nuevo tipo catálogo";
+    ViewBag.Title = "Nuevo tipo catálogo de inventario";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
