--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/Anular.cshtml
@@ -49,6 +49,7 @@
                        settings.Properties.EditFormatString = "dd/MM/yyyy";
                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                       settings.Properties.AllowMouseWheel = false;
                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.Fecha, "", new { @class = "text-danger" })
                     </div>
