--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Importar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Importar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Inventario.in_Producto_Info
 @{
-    ViewBag.Title = "Importar producto";
+    ViewBag.Title = "Importar productos";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
