--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/ProductoTipo/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/ProductoTipo/Anular.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Inventario.in_ProductoTipo_Info
 @{
-    ViewBag.Title = "Anular tipo";
+    ViewBag.Title = "Anular tipo de producto";
 
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
@@ -28,18 +28,36 @@
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-2">
-                <div class="checkbox">
-                    <label for="tp_EsCombo_bool">@Html.CheckBoxFor(q => q.tp_EsCombo_bool) Es combo</label>
+                <div class="form-group">
+                    <label for="check"></label>
+                    @Html.DevExpress().CheckBoxFor(q => q.tp_EsCombo_bool, settings =>
+                    {
+                        settings.Name = "tp_EsCombo_bool";
+                        settings.Text = "Es combo";
+                    }).GetHtml()
+                    @Html.ValidationMessageFor(q => q.tp_EsCombo_bool, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-2">
-                <div class="checkbox">
-                    <label for="tp_ManejaInven_bool">@Html.CheckBoxFor(q => q.tp_ManejaInven_bool) Maneja inventario</label>
+                <div class="form-group">
+                    <label for="check"></label>
+                    @Html.DevExpress().CheckBoxFor(q => q.tp_ManejaInven_bool, settings =>
+                    {
+                        settings.Name = "tp_ManejaInven_bool";
+                        settings.Text = "Maneja inventario";
+                    }).GetHtml()
+                    @Html.ValidationMessageFor(q => q.tp_ManejaInven_bool, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-2">
-                <div class="checkbox">
-                    <label for="Aparece_fabricacion">@Html.CheckBoxFor(q => q.Aparece_fabricacion) Es fabricación</label>
+                <div class="form-group">
+                    <label for="check"></label>
+                    @Html.DevExpress().CheckBoxFor(q => q.Aparece_fabricacion, settings =>
+                    {
+                        settings.Name = "Aparece_fabricacion";
+                        settings.Text = "Es fabricación";
+                    }).GetHtml()
+                    @Html.ValidationMessageFor(q => q.Aparece_fabricacion, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -47,19 +65,37 @@
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-2">
-                <div class="checkbox">
-                    <label for="Aparece_modu_Compras">@Html.CheckBoxFor(q => q.Aparece_modu_Compras) Aparece módulo compras</label>
+                <div class="form-group">
+                    <label for="check"></label>
+                    @Html.DevExpress().CheckBoxFor(q => q.Aparece_modu_Compras, settings =>
+                    {
+                        settings.Name = "Aparece_modu_Compras";
+                        settings.Text = "Aparece módulo compras";
+                    }).GetHtml()
+                    @Html.ValidationMessageFor(q => q.Aparece_modu_Compras, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="col-md-2">
-                <div class="checkbox">
-                    <label for="Aparece_modu_Inventario">@Html.CheckBoxFor(q => q.Aparece_modu_Inventario) Aparece módulo inventario</label>
+                <div class="form-group">
+                    <label for="check"></label>
+                    @Html.DevExpress().CheckBoxFor(q => q.Aparece_modu_Inventario, settings =>
+                    {
+                        settings.Name = "Aparece_modu_Inventario";
+                        settings.Text = "Aparece módulo inventario";
+                    }).GetHtml()
+                    @Html.ValidationMessageFor(q => q.Aparece_modu_Inventario, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-2">
-                <div class="checkbox">
-                    <label for="Aparece_modu_Ventas">@Html.CheckBoxFor(q => q.Aparece_modu_Ventas) Aparece módulo ventas</label>
+                <div class="form-group">
+                    <label for="check"></label>
+                    @Html.DevExpress().CheckBoxFor(q => q.Aparece_modu_Ventas, settings =>
+                    {
+                        settings.Name = "Aparece_modu_Ventas";
+                        settings.Text = "Aparece módulo ventas";
+                    }).GetHtml()
+                    @Html.ValidationMessageFor(q => q.Aparece_modu_Ventas, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
