--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/UnidadDeMedida/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/UnidadDeMedida/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Unidad de medida";
+    ViewBag.Title = "UConsulta de unidades de medida";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
