--- a/ERP/Core.Erp.Web/Areas/Presupuesto/Views/AprobacionPresupuesto/Aprobar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Presupuesto/Views/AprobacionPresupuesto/Aprobar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Presupuesto.pre_Presupuesto_Info
 @{
-    ViewBag.Title = "Aprobación de presupuesto";
+    ViewBag.Title = "Aprobación de presupuestos";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
