--- a/ERP/Core.Erp.Web/Areas/Presupuesto/Views/RubroTipoPresupuesto/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Presupuesto/Views/RubroTipoPresupuesto/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Tipos de rubros";
+    ViewBag.Title = "Consulta de tipos de rubros";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
