--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/AjusteFisicoInventario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/AjusteFisicoInventario/Nuevo.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core.Erp.Info.Inventario.in_Ajuste_Info
 @using Core.Erp.Web.Helps
 @{
-    ViewBag.Title = "Nuevo ajuste fisico";
+    ViewBag.Title = "Nuevo ajuste físico";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -60,6 +60,7 @@
                        settings.Properties.EditFormatString = "dd/MM/yyyy";
                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                       settings.Properties.AllowMouseWheel = false;
                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.Fecha, "", new { @class = "text-danger" })
                     </div>
