--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/CatalogoInventario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/CatalogoInventario/Nuevo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Inventario.in_Catalogo_Info
 @{
-    ViewBag.Title = "Nuevo catálogo";
+    ViewBag.Title = "Nuevo catálogo de inventario";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
