--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Categoria/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Categoria/Nuevo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Inventario.in_categorias_Info
 @{
-    ViewBag.Title = "Nuevo categoría";
+    ViewBag.Title = "Nueva categoría de inventario";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
