--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/Index.cshtml
@@ -4,7 +4,7 @@
 @{
 
     {
-        ViewBag.Title = "Devolución";
+        ViewBag.Title = "Consultar devoluciones de inventario";
         if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
         {
             Response.Redirect("~/Account/Login");
