--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/Nuevo.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core.Erp.Info.Inventario.in_Ing_Egr_Inven_Info
 @using Core.Erp.Web.Helps
 @{
-    ViewBag.Title = "Nuevo ingreso";
+    ViewBag.Title = "Nuevo ingreso de inventario";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -74,6 +74,7 @@
                         settings.Properties.EditFormatString = "dd/MM/yyyy";
                         settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
                         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                        settings.Properties.AllowMouseWheel = false;
                     }).GetHtml()
                         @Html.ValidationMessageFor(q => q.cm_fecha, "", new { @class = "text-danger" })
                     </div>
