--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Linea/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Linea/Modificar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Inventario.in_linea_Info
 @{
-    ViewBag.Title = "Modificar línea";
+    ViewBag.Title = "Modificar línea de producto";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
