--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Marca/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Marca/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Familia";
+    ViewBag.Title = "Consultas de familias de producto";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
