--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/MotivoInventario/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/MotivoInventario/Anular.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Inventario.in_Motivo_Inven_Info
 @{
-    ViewBag.Title = "Anular motivo";
+    ViewBag.Title = "Anular motivo de inventario";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
