--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Presentacion/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Presentacion/Anular.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Inventario.in_presentacion_Info
 @{
-    ViewBag.Title = "Anular presentación";
+    ViewBag.Title = "Anular presentación de producto";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
