--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Core.Erp.Web.Helps
 
 @{
-    ViewBag.Title = "Productos";
+    ViewBag.Title = "Consulta de productos";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
