--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Subgrupo/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Subgrupo/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Subgrupos";
+    ViewBag.Title = "Consulta de subgrupos de producto";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
