--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TipoMovimiento/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TipoMovimiento/Nuevo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Inventario.in_movi_inven_tipo_Info
 @{
-    ViewBag.Title = "Nuevo tipo";
+    ViewBag.Title = "Nuevo tipo de movimiento de inventario";
 
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
