--- a/ERP/Core.Erp.Web/Areas/Presupuesto/Views/AprobacionPresupuesto/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Presupuesto/Views/AprobacionPresupuesto/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core.Erp.Info.Helps.cl_filtros_Info
 
 @{
-    ViewBag.Title = "Presupuestos";
+    ViewBag.Title = "Consulta de presupuestos";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
