--- a/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/Nuevo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Produccion.pro_Fabricacion_Info
 @{
-    ViewBag.Title = "Nueva fabricación";
+    ViewBag.Title = "Nueva elaboración de productos";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -257,6 +257,7 @@
                                settings.Properties.EditFormatString = "dd/MM/yyyy";
                                settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                               settings.Properties.AllowMouseWheel = false;
                            }).GetHtml()
                         @Html.ValidationMessageFor(q => q.Fecha, "", new { @class = "text-danger" })
                     </div>
@@ -281,6 +282,7 @@
                                                settings.Properties.EditFormatString = "dd/MM/yyyy";
                                                settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
                                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                               settings.Properties.AllowMouseWheel = false;
                                            }).GetHtml()
                         @Html.ValidationMessageFor(q => q.FechaIni, "", new { @class = "text-danger" })
                     </div>
@@ -301,6 +303,7 @@
                                                settings.Properties.EditFormatString = "dd/MM/yyyy";
                                                settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
                                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                               settings.Properties.AllowMouseWheel = false;
                                            }).GetHtml()
                         @Html.ValidationMessageFor(q => q.FechaFin, "", new { @class = "text-danger" })
                     </div>
