--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/CargaFamiliar/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/CargaFamiliar/Modificar.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core.Erp.Info.RRHH.ro_cargaFamiliar_Info
 
 @{
-    ViewBag.Title = "Modificar carga ";
+    ViewBag.Title = "Modificar carga familiar";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
