--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoRRHH/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoRRHH/Anular.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.RRHH.ro_catalogo_Info
 @{
-    ViewBag.Title = "Anular Catálogo ";
+    ViewBag.Title = "Anular catálogo";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
