--- a/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/Usuario/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/Usuario/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Usuarios";
+    ViewBag.Title = "consulta de usuarios";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         //Response.Redirect("~/Account/Login");
