--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Cargo/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Cargo/Modificar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.RRHH.ro_cargo_Info
 @{
-    ViewBag.Title = "Modificar Cargo";
+    ViewBag.Title = "Modificar cargo";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
