--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoRRHH/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoRRHH/Nuevo.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core.Erp.Info.RRHH.ro_catalogo_Info
 
 @{
-    ViewBag.Title = "Nuevo Catálogo ";
+    ViewBag.Title = "Nuevo catálogo";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
