--- a/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/Menu/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/Menu/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Menú";
+    ViewBag.Title = "Consulta de menú";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
