--- a/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/MenuPorEmpresa/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/MenuPorEmpresa/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.SeguridadAcceso.seg_Menu_x_Empresa_Info
 @{
-    ViewBag.Title = "Menú por empresa";
+    ViewBag.Title = "Consulta de menú por empresa";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
