--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_CmbProducto_Factura.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_CmbProducto_Factura.cshtml
@@ -13,6 +13,7 @@
         settings.Properties.TextFormatString = "[{0}] {1}";
         settings.Properties.ValueField = "IdProducto";
         settings.Properties.ValueType = typeof(decimal);
+        settings.Properties.AllowMouseWheel = false;
 
         settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
         settings.Properties.AllowNull = true;
