--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/_GridViewPartial_empleado_novedad_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/_GridViewPartial_empleado_novedad_det.cshtml
@@ -69,7 +69,7 @@
                 sp.MinValue = 0;
                 sp.MaxValue = 999999999;
                 sp.Width = Unit.Percentage(100);
-
+                sp.ClientSideEvents.ValueChanged = "function(s, e){ CalcularValorTotalHoras();}";
             });
         });
         settings.Columns.Add(column =>
@@ -114,3 +114,28 @@
 
 }
 @grid.Bind(Model.lst_novedad_det).GetHtml()
+
+<script type="text/javascript">
+    function CalcularValorTotalHoras(s, e) {
+        var datos = {
+            IdEmpleado: IdEmpleado.GetValue(),
+            IdRubro: IdRubro.GetValue(),
+            CantidadHoras: GridViewPartial_empleado_novedad_det.GetEditor('CantidadHoras').GetValue()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("CalcularValorTotalHoras", "EmpleadoNovedad", new { Area = "RRHH" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                GridViewPartial_empleado_novedad_det.GetEditor('Valor').SetValue(data);
+            },
+            error: function (error) {
+            }
+        });
+    };
+</script>
