--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/ClienteContactos/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/ClienteContactos/Anular.cshtml
@@ -18,6 +18,20 @@
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdCliente)
     @Html.HiddenFor(q => q.IdContacto)
+
+    if (ViewBag.mensaje != null)
+    {
+        <div class="row">
+            <div class="col-md-12">
+                <div class="alert alert-warning alert-dismissible">
+                    <h4>
+                        <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+                    </h4>
+                </div>
+            </div>
+        </div>
+    }
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -97,7 +111,7 @@
     </div>
 
     <div class="box-footer">
-        <button type="submit" class="btn btn-danger">Anular</button>
+        <button type="submit" class="btn btn-danger">Eliminar</button>
         <a class="btn btn-default" href="@Url.Action("Index","ClienteContactos", new { Area = "Facturacion" , IdEmpresa = ViewBag.IdEmpresa, IdCliente = ViewBag.IdCliente })">Cancelar</a>
     </div>
     @section Scripts {
