--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_GridViewPartial_NotaCrebitoFacturacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_GridViewPartial_NotaCrebitoFacturacion.cshtml
@@ -101,10 +101,11 @@
             column.FieldName = "no_fecha";
             column.Caption = "Fecha";
             column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
-            column.Width = Unit.Percentage(7);
+            column.Width = Unit.Percentage(8);
         });
-        settings.Columns.Add("Nombres", "Cliente").Width = Unit.Percentage(30);
-        settings.Columns.Add("NumNota_Impresa", "# Nota").Width = Unit.Percentage(15);
+        settings.Columns.Add("Nombres", "Cliente").Width = Unit.Percentage(27);
+        settings.Columns.Add("NumNota_Impresa", "# Nota").Width = Unit.Percentage(12);
+        settings.Columns.Add("NaturalezaNota", "Naturaleza").Width = Unit.Percentage(8);
         settings.Columns.Add(column =>
         {
             column.FieldName = "sc_subtotal";
